--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.16.1",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
-    "mysql2": "^3.6.3"
+    "google-tts-api": "^2.0.2",
+    "libsodium-wrappers": "^0.7.13",
+    "mysql2": "^3.6.3",
+    "node-fetch": "^3.3.2",
+    "prism-media": "^1.3.5"
   },
   "type": "module"
 }
