--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.16.1",
+    "axios": "^1.6.2",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
     "google-tts-api": "^2.0.2",
     "libsodium-wrappers": "^0.7.13",
     "mysql2": "^3.6.3",
     "node-fetch": "^3.3.2",
+    "openai": "^4.0.0",
     "prism-media": "^1.3.5"
   },
   "type": "module"
